2006-02-16  Danilo Šegan  <danilo@gnome.org>

	* doc-l10n-status.py: Use module id if cannot deduce correct
	DOC_MODULE value. 

2006-02-13  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: s/gnomemeeting/ekiga/.

2006-01-06  Vincent van Adrighem  <adrighem@gnome.org>

	* modules.xml: Typo in cvs-module (gnome-system-tools).

2006-01-06  Vincent Untz  <vuntz@gnome.org>

	* modules.xml: add gnome-utils

2006-01-06  Vincent Untz  <vuntz@gnome.org>

	* modules.xml: add gnome-system-tools

2006-01-05  Vincent van Adrighem  <adrighem@gnome.org>

	* modules.xml: Reordered modules (Alphabet), placing
	    generic stuff like tour and press-release first.
	    Added: gedit, gnome-control-center, gnome-keyring-manager.
	    Branch-change: evince, gnomemeeting, zenity.

2006-01-04  Vincent van Adrighem  <adrighem@gnome.org>

	* modules.xml: Changed epiphany branch from gnome-2-12 to HEAD.

2005-09-07  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: Add gnome-schedule.

2005-09-03  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: Added press-release.

2005-08-20  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: Added gucharmap.

2005-08-19  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: Add release-notes.

2005-08-18  Danilo Šegan  <danilo@gnome.org>

	* doc-l10n-status.py (read_makefile_variable): Support "include" files.

2005-08-18  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: Add gnome-netstatus.

2005-08-05  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: Added file-roller.

2005-08-04  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: Add fast-user-switch-applet.

2005-08-03  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: Add gnomemeeting (opal branch).

2005-08-02  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: Added gdm2.

2005-07-29  Danilo Šegan  <danilo@gnome.org>

	* doc-l10n-status.py (stats_as_html): Improve rendering.

2005-07-27  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: Added zenity, sound-juicer.
