@@ -1,3 +1,7 @@
+2006-02-20  Danilo Šegan  <danilo@gnome.org>
+
+	* doc-l10n-status.py: Fix the below fix :).
+
 2006-02-16  Danilo Šegan  <danilo@gnome.org>
 
 	* doc-l10n-status.py: Use module id if cannot deduce correct
